--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <h2 class="subtitle">Tu</h2>
         <h5>Selecciona una opción</h5>
         <div class="options">
-          <i class="fas fa-hand-paper hand-paper"></i>
-          <i class="fas fa-hand-rock hand-rock"></i>
-          <i class="fas fa-hand-scissors hand-scissors"></i>
+          <i class="fa-regular fa-hand"></i>
+          <i class="fa-regular fa-hand-peace"></i>
+          <i class="fa-regular fa-hand-scissors"></i>
         </div>
       </div>
       <!--RESULTADO-->
@@ -37,11 +37,11 @@
           <p id="result"></p>
           <div class="result-total">
             <div class="user">
-              <i id="user-choice" class="fas results-game-user"></i>
+              <i id="user-choice" class="fa-regular results-game-user"></i>
               <p id="user-choice-text"></p>
             </div>
             <div class="computer">
-              <i id="computer-choice" class="fas results-game-computer"></i>
+              <i id="computer-choice" class="fa-regular results-game-computer"></i>
               <p id="computer-choice-text"></p>
             </div>
           </div>
@@ -51,9 +51,9 @@
       <div class="right">
         <h2 class="subtitle">Computadora</h2>
         <div class="options-computer">
-          <i class="fas fa-hand-paper"></i>
-          <i class="fas fa-hand-rock"></i>
-          <i class="fas fa-hand-scissors"></i>
+          <i class="fa-regular fa-hand"></i>
+          <i class="fa-regular fa-hand-peace"></i>
+          <i class="fa-regular fa-hand-scissors"></i>
         </div>
       </div>
 
