--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <h5>Selecciona una opción</h5>
         <div class="options">
           <i class="fa-regular fa-hand"></i>
+          <i class="fa-regular fa-hand-back-fist"></i>
           <i class="fa-regular fa-hand-peace"></i>
-          <i class="fa-regular fa-hand-scissors"></i>
         </div>
       </div>
       <!--RESULTADO-->
@@ -52,8 +52,8 @@
         <h2 class="subtitle">Computadora</h2>
         <div class="options-computer">
           <i class="fa-regular fa-hand"></i>
+          <i class="fa-regular fa-hand-back-fist"></i>
           <i class="fa-regular fa-hand-peace"></i>
-          <i class="fa-regular fa-hand-scissors"></i>
         </div>
       </div>
 
