--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta charset="utf-8">
   <title>Juego de Piedra, Papel y Tijera</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/regular.min.css" integrity="sha512-3YMBYASBKTrccbNMWlnn0ZoEOfRjVs9qo/dlNRea196pg78HaO0H/xPPO2n6MIqV6CgTYcWJ1ZB2EgWjeNP6XA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -26,8 +25,8 @@
         <h5>Selecciona una opción</h5>
         <div class="options">
           <i class="fa-regular fa-hand"></i>
-          <i class="fa-regular fa-hand-back-fist"></i>
           <i class="fa-regular fa-hand-peace"></i>
+          <i class="fa-regular fa-hand-back-fist"></i>
         </div>
       </div>
       <!--RESULTADO-->
@@ -52,8 +51,8 @@
         <h2 class="subtitle">Computadora</h2>
         <div class="options-computer">
           <i class="fa-regular fa-hand"></i>
-          <i class="fa-regular fa-hand-back-fist"></i>
           <i class="fa-regular fa-hand-peace"></i>
+          <i class="fa-regular fa-hand-back-fist"></i>
         </div>
       </div>
 
